5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1828_3182.log
== SUBMITION (2019-06-12 14:37:36) 
-- CODE:
from numpy import*

v = array(eval(input("historico: ")))

s= zeros(3, dtype= int)

for i in range(:
	if

		
-- EXECUTION TIME:
0.713607
-- ERROR:
  File "/home/codebench/codes/1828/3182/main.py", line 7
    for i in range(:
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:39:52) 
-- CODE:
from numpy import*

v = array(eval(input("historico: ")))

s= zeros(3, dtype= int)

print(s)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:40:06) 
-- CODE:
from numpy import*

v = array(eval(input("historico: ")))

s= zeros(3, dtype= int)

print(s)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:41:29) 
-- CODE:
from numpy import*

v = array(eval(input("historico: ")))

s= zeros(3, dtype=int)

for i in range(i,f,s)
	

		
-- EXECUTION TIME:
0.482539
-- ERROR:
  File "/home/codebench/codes/1828/3182/main.py", line 7
    for i in range(i,f,s)
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
